--- a/00-G2-CS2B-FAI-April-2021/Question_3-Part-B.Rmd
+++ b/00-G2-CS2B-FAI-April-2021/Question_3-Part-B.Rmd
@@ -34,73 +34,76 @@ pre {
 
 ---
 
+This is the second part of a demonstration on Cox Proportional Hazard Models with R
 
-Part 6
+### R Package
 
-(vi) Estimate a Cox proportional hazards model with death as the event of interest 
+```{r}
+library(survival)
+```
+
+### Data used in this example
+
+```{r}
+mortalitydata <- 
+read.csv(file = "CS2B_Apr_21_Qu_3_Data.csv", head = TRUE)
+```
+
+
+
+---
+
+### Part 6
+
+Estimate a Cox proportional hazards model with death as the event of interest 
 using the two covariates, drug and gender, with no interaction term, pasting 
-your results into your answer script. You should use the Breslow method for 
-tie handling. 
+your results into your answer script.
 
-(vii) Comment on the results produced in part (vi) with reference to the effects of 
-the two covariates, drug and gender, on the mortality rate. [5]
-(viii) Update the Cox proportional hazards model in part (vi) to include an 
-interaction term between drug and gender, pasting your results into your 
-answer script. 
-(ix) Analyse the effectiveness of MediCo, commenting on any differences between 
-males and females. 
+You should use the Breslow method for tie handling. 
 
-(vi)
 
 
 ```{r}
-coxph( 
+m1 <- coxph( 
  
 
-Surv(mortalitydata$Time, mortalitydata$Status) ~ Drug + 
-Gender, 
-data = mortalitydata, 
- 
-
-ties = "breslow") 
+Surv(mortalitydata$Time, 
+     mortalitydata$Status) ~ Drug + Gender, 
+     data = mortalitydata, 
+     ties = "breslow") 
  
 ```
 
 ---
-Call:
-coxph(formula = Surv(mortalitydata$Time, mortalitydata$Status) 
-~ 
- Drug + Gender, data = mortalitydata, ties = "breslow")
-Coef exp(coef) se(coef) z p
-Drug -0.35174 0.70347 0.03439 -10.23 <2e-16
-Gender -0.93263 0.39352 0.03575 -26.09 <2e-16
-Likelihood ratio test=820.3 on 2 df, p=< 2.2e-16
-n= 4400, number of events= 3441 
- 
----
-OR:
+
 
 ```{r}
-coxph( 
- 
-
-Surv(mortalitydata$Time, mortalitydata$Status) ~ 
-mortalitydata$Drug + mortalitydata$Gender, [2½]
-ties = "breslow") 
+summary(m1)
 ```
 
 ---
 
-Call:
-coxph(formula = Surv(mortalitydata$Time, mortalitydata$Status) ~ 
- mortalitydata$Drug + mortalitydata$Gender, ties = "breslow")
- coef exp(coef) se(coef) z p
-mortalitydata$Drug -0.35174 0.70347 0.03439 -10.23 <2e-16
-mortalitydata$Gender -0.93263 0.39352 0.03575 -26.09 <2e-16
-Likelihood ratio test=820.3 on 2 df, p=< 2.2e-16
-n= 4400, number of events= 3441 
- 
+
+```{r}
+## Check for violation of proportional hazard (constant HR over time)
+(res.zph1 <- cox.zph(m1))
+```
 ---
+
+```{r}
+## Displays a graph of the scaled Schoenfeld residuals, along with a smooth curve.
+par(mfrow=c(1,2))
+plot(res.zph1,pch=18,col="red")
+par(mfrow=c(1,1))
+```
+
+---
+
+### Part 7
+
+Comment on the results produced in part (6) with reference to the effects of 
+the two covariates, drug and gender, on the mortality rate. 
+
 
 
 #### Exercise 7
@@ -110,7 +113,7 @@ n= 4400, number of events= 3441
 * The results suggest that female lives’ mortality rates are around 40% of that of males 
  
 
-* However, the graphs from part (iv) suggest that an interaction term may be required in the 
+* However, the graphs from part 4 suggest that an interaction term may be required in the 
 Cox model to fully analyse the effects of MediCo and Gender on the mortality rate, and 
 hence the above analysis is potentially misleading 
  
@@ -124,82 +127,53 @@ rate than the Drug covariate
 ---
 
 
-#### Exercise 8
+### Exercise 8
+
+Update the Cox proportional hazards model in part 6. to include an 
+interaction term between drug and gender, pasting your results into your 
+answer script. 
 
 
 ```{r}
-coxph( 
- 
-
-Surv(mortalitydata$Time, mortalitydata$Status) ~ Drug*Gender, 
-
- 
-
-data = mortalitydata, 
- 
-
-ties = "breslow") 
- 
+m2 <- coxph( 
+  Surv(mortalitydata$Time, mortalitydata$Status) ~ Drug*Gender, 
+  data = mortalitydata, 
+  ties = "breslow"
+  ) 
 ```
 
 ---
 
-Call:
-coxph(formula = Surv(mortalitydata$Time, mortalitydata$Status) ~ 
- Drug * Gender, data = mortalitydata, ties = "breslow")
-Coef exp(coef) se(coef) z p
-Drug -0.07143 0.93106 0.04515 -1.582 0.114
-Gender -0.63564 0.52960 0.04711 -13.494 <2e-16
-Drug:Gender -0.65874 0.51750 0.06977 -9.442 <2e-16
-Likelihood ratio test=910.2 on 3 df, p=< 2.2e-16
-n= 4400, number of events= 3441 
- 
+```{r}
+summary(m2)
+```
 
----
-
-OR:
-coxph( 
- 
-
-Surv(mortalitydata$Time, mortalitydata$Status) ~ 
-mortalitydata$Drug * mortalitydata$Gender, [1½]
-ties = "breslow") 
- 
-
-Call:
-coxph(formula = Surv(mortalitydata$Time, mortalitydata$Status) ~ 
- mortalitydata$Drug * mortalitydata$Gender, ties = "breslow")
- coef exp(coef) se(coef) z p
-mortalitydata$Drug -0.07143 0.93106 0.04515 -1.582 0.114
-mortalitydata$Gender -0.63564 0.52960 0.04711 -13.494 <2e-16
-mortalitydata$Drug:mortalitydata$Gender -0.65874 0.51750 0.06977 -9.442 <2e-16
-Likelihood ratio test=910.2 on 3 df, p=< 2.2e-16
-n= 4400, number of events= 3441 
  
 ---
 
+### Part 9
 
-(ix)
-MediCo reduces male mortality rates by 1 – 0.93106 = 6.9% 
+Analyse the effectiveness of MediCo, commenting on any differences between 
+males and females. 
+
+#### Solution 
+
+* MediCo reduces male mortality rates by 1 – 0.93106 = 6.9% which is not statistically significant 
  
 
-which is not statistically significant 
+* and reduces female mortality rates by 1 – 0.93106 * 0.51750 = 51.8% which is statistically significant 
  
 
-and reduces female mortality rates by 1 – 0.93106 * 0.51750 = 51.8% 
- 
-
-which is statistically significant 
- 
-
-The results from the Cox analysis are consistent with the Kaplan–Meier plots in part (iv)
+* The results from the Cox analysis are consistent with the Kaplan–Meier plots in part 4.
 
 ---
 
 The likelihood ratio test statistic for the model with the interaction term compared with the 
 model without the interaction term is: 
-910.2 – 820.3 = 89.9 
+$910.2 – 820.3 = 89.9 $
 OR 
+
+```{r}
 L1 = m1$loglik
  
 
@@ -207,10 +181,10 @@ L2 = m2$loglik
  
 
 -2 *(L1 - L2)
-
+```
  
- 89.8897
-(where m1 = Cox model fitted in part (vi) and m2 = Cox model fitted in part (viii))
+(where m1 = Cox model fitted in part (6) and m2 = Cox model fitted in part 8)
+
 which is highly significant under the chi-squared distribution with one degree of freedom.
 
  
