--- a/00-M1-CS1B-ASI-July-2022/M1-Question1.Rmd
+++ b/00-M1-CS1B-ASI-July-2022/M1-Question1.Rmd
@@ -39,25 +39,28 @@ pre {
 
 Q. 1) Identify the probability distribution that best fits the below questions. Calculate the 
 following using R functions:
-i) Assume golf balls from the driving range next door lands in your yard at an average 
+1.  Assume golf balls from the driving range next door lands in your yard at an average 
 rate of 3 balls per hour during the day. What is the probability that 10 or fewer golf 
 balls will land in your yard during the afternoon, assuming the afternoon is 5 hours 
 long? 
-ii) You are surveying people exiting from a polling booth and asking them if they voted 
+2.  You are surveying people exiting from a polling booth and asking them if they voted 
 independently. The probability that a person voted independently is 20%. What is 
 the probability that 70 people must be asked before you can find 5 people who voted 
 independently? 
 
 ---
-iii) Assume you flip a fair coin 100 times. What is the number N such that, 90% of the 
+3.   Assume you flip a fair coin 100 times. What is the number N such that, 90% of the 
 time, the number of heads is less than or equal to N?
-iv) A researcher is waiting outside of a library to ask people if they support a certain 
+4.  A researcher is waiting outside of a library to ask people if they support a certain 
 law. The probability that a given person supports the law is p = 0.2. What is the 
 probability that the fourth person the researcher talks to is the first person to support
 the law?
-v) Assume that a light bulb has a mean lifetime of 1000 hours. What is the probability 
+5.  Assume that a light bulb has a mean lifetime of 1000 hours. What is the probability 
 that the light bulb survives to 2000 hours?
-vi) Assume a random variable Z is distributed according to the normal distribution with 
+6.   Assume a random variable Z is distributed according to the normal distribution with 
 mean 6 and standard deviation 4. What is the probability that Z takes on a value 
 between -1 and 3?
+---
+
+
 ---
