--- a/00-M1-CS1B-ASI-July-2022/M1-Question3.Rmd
+++ b/00-M1-CS1B-ASI-July-2022/M1-Question3.Rmd
@@ -42,12 +42,12 @@ Q. 3) An analysis was carried out to investigate the annual average rainfall of 
 The data is as below:
 Iran: 128,125,133,104,146,132,125,118,129,124
 Belgium:160,128,169,105,151,164,162,177,185,150,182,158,156,123,141,176,162,172
-i) Perform a suitable test to determine whether the rainfall in both countries has equal 
+1.  Perform a suitable test to determine whether the rainfall in both countries has equal 
 variance or not, at the 5% confidence level. (6)
-ii) Test whether the mean rainfall in both countries is equal or not, at 5% confidence 
+2.  Test whether the mean rainfall in both countries is equal or not, at 5% confidence 
 level. 
-iii) Calculate the 95% confidence interval for difference in means. (2)
-iv) Comment on the results in part (ii) and (iii).
+3.   Calculate the 95% confidence interval for difference in means. (2)
+4.  Comment on the results in part (2.  and (3.  .
 ---
 
 ```{r}
