--- a/00-M2-CS2B-ASI-July-2022/M2-Question3.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question3.Rmd
@@ -38,8 +38,8 @@ pre {
 [25]
 Q. 3) The number of customers arriving to a grocery store can be modelled by a Poisson process 
 with rate of 30 customers per hour.
-i) Find the probability that there are 2 customers between 10:00 AM and 10:15 AM. (2)
-ii) Find the probability that there are 7 customers between 11:00 AM and 11:20 AM
+1.  Find the probability that there are 2 customers between 10:00 AM and 10:15 AM. (2)
+2.  Find the probability that there are 7 customers between 11:00 AM and 11:20 AM
 and 15 customers between 11:20 AM and 12 noon. (4)
-iii) Prepare a probability distribution table for different number of customers (0, 1, 2…20) at 
+3.   Prepare a probability distribution table for different number of customers (0, 1, 2…20) at 
 any given 10 minute time interval. (5)
