--- a/00-M2-CS2B-ASI-July-2022/M2-Question5.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question5.Rmd
@@ -37,14 +37,14 @@ pre {
 ---
 
 [12]
-Q. 5) i) Write a general function to compute the truncated moments for a lognormal distribution 
+Q. 5) 1.  Write a general function to compute the truncated moments for a lognormal distribution 
 using k, σ, µ, L (the lower bound) and U (the upper bound)
  Given
 σ= 0.7
 µ = 1.2
 L = 10
 U = ∞
-ii) Use the function generated in (i) to compute the first and second order truncated moments.
-iii) Using the function in (i) or otherwise, compute the first two moments for a non-truncated 
+2.  Use the function generated in (1.  to compute the first and second order truncated moments.
+3.   Using the function in (1.  or otherwise, compute the first two moments for a non-truncated 
 normal distribution with the same µ and σ.
-iv) Compare the results generated in (ii) and (iii) with appropriate reasoning.
+4.  Compare the results generated in (2.  and (3.   with appropriate reasoning.
