--- a/00-M2-CS2B-ASI-July-2022/M2-Question6.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question6.Rmd
@@ -48,9 +48,9 @@ G. Economy – Economy as a bowler
 ---
 
 Load the data into R and answer the following questions. Name the data frame as “Cricket”.
-i) What is the average of “Runs” and “Wickets” for three groups of players based on the 
+1.  What is the average of “Runs” and “Wickets” for three groups of players based on the 
 initial grouping.
-ii) Create a copy of “Cricket” and rename it as “Cricket1”. In “Cricket1” keep only the four 
+2.  Create a copy of “Cricket” and rename it as “Cricket1”. In “Cricket1” keep only the four 
 numerical columns and remove the rest of them.
 
 ---
@@ -61,17 +61,17 @@ Cricket1 = as.data.frame(scale (Cricket1))
 After scaling, set a seed value of 100 using the following code <tt>set.seed(100)</tt>.
 
 --=
-iii) Execute k-means clustering algorithm on “Cricket1” and assign it to a variable 
+3.   Execute k-means clustering algorithm on “Cricket1” and assign it to a variable 
 “clust_Cricket”. Print the cluster means of the generated clusters.
-iv) Add the cluster memberships of each of the players to the original data frame (Cricket) by 
+4.  Add the cluster memberships of each of the players to the original data frame (Cricket) by 
 creating a new column called “***Clust_Membership***”.
-v) Rename the cluster memberships as “Batsman”, “***Bowler***” and “Alrounder” by following 
+5.  Rename the cluster memberships as “Batsman”, “***Bowler***” and “Alrounder” by following 
 the rules given below:
 * The cluster with the highest average runs is renamed as “Batsman”
 * The cluster with the highest average number of wickets is renamed as “***Bowler***”
 * The remaining cluster is renamed as “Alrounder”
-vi) Compute the error rate in clustering by comparing the initial grouping with the clusters 
+6.   Compute the error rate in clustering by comparing the initial grouping with the clusters 
 created.
-vii)Comment on the possible reasons for misclassification in the clustering.
+7.  Comment on the possible reasons for misclassification in the clustering.
 [20]
 ********************
