--- a/02-StatisticsWithR/CaseStudy-ToothgrowthData.tex
+++ b/02-StatisticsWithR/CaseStudy-ToothgrowthData.tex
@@ -1,452 +1,34 @@
 
-    
+### Description of ToothGrowth dataset
 
 
 
+str  (ToothGrowth {)}
 
-    
-\documentclass[11pt]{article}
-
-    
-    \usepackage[breakable]{tcolorbox}
-    \tcbset{nobeforeafter} % prevents tcolorboxes being placing in paragraphs
-    \usepackage{float}
-    \floatplacement{figure}{H} % forces figures to be placed at the correct location
-    
-    \usepackage[T1]{fontenc}
-    % Nicer default font (+ math font) than Computer Modern for most use cases
-    \usepackage{mathpazo}
-
-    % Basic figure setup, for now with no caption control since it's done
-    % automatically by Pandoc (which extracts ![](path) syntax from Markdown).
-    \usepackage{graphicx}
-    % We will generate all images so they have a width \maxwidth. This means
-    % that they will get their normal width if they fit onto the page, but
-    % are scaled down if they would overflow the margins.
-    \makeatletter
-    \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth
-    \else\Gin@nat@width\fi}
-    \makeatother
-    \let\Oldincludegraphics\includegraphics
-    % Set max figure width to be 80% of text width, for now hardcoded.
-    \renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=.8\maxwidth]{#1}}
-    % Ensure that by default, figures have no caption (until we provide a
-    % proper Figure object with a Caption API and a way to capture that
-    % in the conversion process - todo).
-    \usepackage{caption}
-    \DeclareCaptionLabelFormat{nolabel}{}
-    \captionsetup{labelformat=nolabel}
-
-    \usepackage{adjustbox} % Used to constrain images to a maximum size 
-    \usepackage{xcolor} % Allow colors to be defined
-    \usepackage{enumerate} % Needed for markdown enumerations to work
-    \usepackage{geometry} % Used to adjust the document margins
-    \usepackage{amsmath} % Equations
-    \usepackage{amssymb} % Equations
-    \usepackage{textcomp} % defines textquotesingle
-    % Hack from http://tex.stackexchange.com/a/47451/13684:
-    \AtBeginDocument{%
-        \def\PYZsq{\textquotesingle}% Upright quotes in Pygmentized code
-    }
-    \usepackage{upquote} % Upright quotes for verbatim code
-    \usepackage{eurosym} % defines \euro
-    \usepackage[mathletters]{ucs} % Extended unicode (utf-8) support
-    \usepackage[utf8x]{inputenc} % Allow utf-8 characters in the tex document
-    \usepackage{fancyvrb} % verbatim replacement that allows latex
-    \usepackage{grffile} % extends the file name processing of package graphics 
-                         % to support a larger range 
-    % The hyperref package gives us a pdf with properly built
-    % internal navigation ('pdf bookmarks' for the table of contents,
-    % internal cross-reference links, web links for URLs, etc.)
-    \usepackage{hyperref}
-    \usepackage{longtable} % longtable support required by pandoc >1.10
-    \usepackage{booktabs}  % table support for pandoc > 1.12.2
-    \usepackage[inline]{enumitem} % IRkernel/repr support (it uses the enumerate* environment)
-    \usepackage[normalem]{ulem} % ulem is needed to support strikethroughs (\sout)
-                                % normalem makes italics be italics, not underlines
-    \usepackage{mathrsfs}
-    
-
-    
-    % Colors for the hyperref package
-    \definecolor{urlcolor}{rgb}{0,.145,.698}
-    \definecolor{linkcolor}{rgb}{.71,0.21,0.01}
-    \definecolor{citecolor}{rgb}{.12,.54,.11}
-
-    % ANSI colors
-    \definecolor{ansi-black}{HTML}{3E424D}
-    \definecolor{ansi-black-intense}{HTML}{282C36}
-    \definecolor{ansi-red}{HTML}{E75C58}
-    \definecolor{ansi-red-intense}{HTML}{B22B31}
-    \definecolor{ansi-green}{HTML}{00A250}
-    \definecolor{ansi-green-intense}{HTML}{007427}
-    \definecolor{ansi-yellow}{HTML}{DDB62B}
-    \definecolor{ansi-yellow-intense}{HTML}{B27D12}
-    \definecolor{ansi-blue}{HTML}{208FFB}
-    \definecolor{ansi-blue-intense}{HTML}{0065CA}
-    \definecolor{ansi-magenta}{HTML}{D160C4}
-    \definecolor{ansi-magenta-intense}{HTML}{A03196}
-    \definecolor{ansi-cyan}{HTML}{60C6C8}
-    \definecolor{ansi-cyan-intense}{HTML}{258F8F}
-    \definecolor{ansi-white}{HTML}{C5C1B4}
-    \definecolor{ansi-white-intense}{HTML}{A1A6B2}
-    \definecolor{ansi-default-inverse-fg}{HTML}{FFFFFF}
-    \definecolor{ansi-default-inverse-bg}{HTML}{000000}
-
-    % commands and environments needed by pandoc snippets
-    % extracted from the output of `pandoc -s`
-    \providecommand{\tightlist}{%
-      \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
-    \DefineVerbatimEnvironment{Highlighting}{Verbatim}{commandchars=\\\{\}}
-    % Add ',fontsize=\small' for more characters per line
-    \newenvironment{Shaded}{}{}
-    \newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.00,0.44,0.13}{\textbf{{#1}}}}
-    \newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.56,0.13,0.00}{{#1}}}
-    \newcommand{\DecValTok}[1]{\textcolor[rgb]{0.25,0.63,0.44}{{#1}}}
-    \newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.25,0.63,0.44}{{#1}}}
-    \newcommand{\FloatTok}[1]{\textcolor[rgb]{0.25,0.63,0.44}{{#1}}}
-    \newcommand{\CharTok}[1]{\textcolor[rgb]{0.25,0.44,0.63}{{#1}}}
-    \newcommand{\StringTok}[1]{\textcolor[rgb]{0.25,0.44,0.63}{{#1}}}
-    \newcommand{\CommentTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textit{{#1}}}}
-    \newcommand{\OtherTok}[1]{\textcolor[rgb]{0.00,0.44,0.13}{{#1}}}
-    \newcommand{\AlertTok}[1]{\textcolor[rgb]{1.00,0.00,0.00}{\textbf{{#1}}}}
-    \newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.02,0.16,0.49}{{#1}}}
-    \newcommand{\RegionMarkerTok}[1]{{#1}}
-    \newcommand{\ErrorTok}[1]{\textcolor[rgb]{1.00,0.00,0.00}{\textbf{{#1}}}}
-    \newcommand{\NormalTok}[1]{{#1}}
-    
-    % Additional commands for more recent versions of Pandoc
-    \newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.53,0.00,0.00}{{#1}}}
-    \newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.25,0.44,0.63}{{#1}}}
-    \newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.25,0.44,0.63}{{#1}}}
-    \newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.73,0.40,0.53}{{#1}}}
-    \newcommand{\ImportTok}[1]{{#1}}
-    \newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.73,0.13,0.13}{\textit{{#1}}}}
-    \newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textbf{\textit{{#1}}}}}
-    \newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textbf{\textit{{#1}}}}}
-    \newcommand{\VariableTok}[1]{\textcolor[rgb]{0.10,0.09,0.49}{{#1}}}
-    \newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.00,0.44,0.13}{\textbf{{#1}}}}
-    \newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.40,0.40,0.40}{{#1}}}
-    \newcommand{\BuiltInTok}[1]{{#1}}
-    \newcommand{\ExtensionTok}[1]{{#1}}
-    \newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.74,0.48,0.00}{{#1}}}
-    \newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.49,0.56,0.16}{{#1}}}
-    \newcommand{\InformationTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textbf{\textit{{#1}}}}}
-    \newcommand{\WarningTok}[1]{\textcolor[rgb]{0.38,0.63,0.69}{\textbf{\textit{{#1}}}}}
-    
-    
-    % Define a nice break command that doesn't care if a line doesn't already
-    % exist.
-    \def\br{\hspace*{\fill} \\* }
-    % Math Jax compatibility definitions
-    \def\gt{>}
-    \def\lt{<}
-    \let\Oldtex\TeX
-    \let\Oldlatex\LaTeX
-    \renewcommand{\TeX}{\textrm{\Oldtex}}
-    \renewcommand{\LaTeX}{\textrm{\Oldlatex}}
-    % Document parameters
-    % Document title
-    \title{CaseStudy-ToothgrowthData}
-    
-    
-    
-    
-    
-% Pygments definitions
-\makeatletter
-\def\PY@reset{\let\PY@it=\relax \let\PY@bf=\relax%
-    \let\PY@ul=\relax \let\PY@tc=\relax%
-    \let\PY@bc=\relax \let\PY@ff=\relax}
-\def\PY@tok#1{\csname PY@tok@#1\endcsname}
-\def\PY@toks#1+{\ifx\relax#1\empty\else%
-    \PY@tok{#1}\expandafter\PY@toks\fi}
-\def\PY@do#1{\PY@bc{\PY@tc{\PY@ul{%
-    \PY@it{\PY@bf{\PY@ff{#1}}}}}}}
-\def\PY#1#2{\PY@reset\PY@toks#1+\relax+\PY@do{#2}}
-
-\expandafter\def\csname PY@tok@gd\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.63,0.00,0.00}{##1}}}
-\expandafter\def\csname PY@tok@gu\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.50,0.00,0.50}{##1}}}
-\expandafter\def\csname PY@tok@gt\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.00,0.27,0.87}{##1}}}
-\expandafter\def\csname PY@tok@gs\endcsname{\let\PY@bf=\textbf}
-\expandafter\def\csname PY@tok@gr\endcsname{\def\PY@tc##1{\textcolor[rgb]{1.00,0.00,0.00}{##1}}}
-\expandafter\def\csname PY@tok@cm\endcsname{\let\PY@it=\textit\def\PY@tc##1{\textcolor[rgb]{0.25,0.50,0.50}{##1}}}
-\expandafter\def\csname PY@tok@vg\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.10,0.09,0.49}{##1}}}
-\expandafter\def\csname PY@tok@vi\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.10,0.09,0.49}{##1}}}
-\expandafter\def\csname PY@tok@vm\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.10,0.09,0.49}{##1}}}
-\expandafter\def\csname PY@tok@mh\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.40,0.40,0.40}{##1}}}
-\expandafter\def\csname PY@tok@cs\endcsname{\let\PY@it=\textit\def\PY@tc##1{\textcolor[rgb]{0.25,0.50,0.50}{##1}}}
-\expandafter\def\csname PY@tok@ge\endcsname{\let\PY@it=\textit}
-\expandafter\def\csname PY@tok@vc\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.10,0.09,0.49}{##1}}}
-\expandafter\def\csname PY@tok@il\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.40,0.40,0.40}{##1}}}
-\expandafter\def\csname PY@tok@go\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.53,0.53,0.53}{##1}}}
-\expandafter\def\csname PY@tok@cp\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.74,0.48,0.00}{##1}}}
-\expandafter\def\csname PY@tok@gi\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.00,0.63,0.00}{##1}}}
-\expandafter\def\csname PY@tok@gh\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.00,0.00,0.50}{##1}}}
-\expandafter\def\csname PY@tok@ni\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.60,0.60,0.60}{##1}}}
-\expandafter\def\csname PY@tok@nl\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.63,0.63,0.00}{##1}}}
-\expandafter\def\csname PY@tok@nn\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.00,0.00,1.00}{##1}}}
-\expandafter\def\csname PY@tok@no\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.53,0.00,0.00}{##1}}}
-\expandafter\def\csname PY@tok@na\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.49,0.56,0.16}{##1}}}
-\expandafter\def\csname PY@tok@nb\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.00,0.50,0.00}{##1}}}
-\expandafter\def\csname PY@tok@nc\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.00,0.00,1.00}{##1}}}
-\expandafter\def\csname PY@tok@nd\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.67,0.13,1.00}{##1}}}
-\expandafter\def\csname PY@tok@ne\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.82,0.25,0.23}{##1}}}
-\expandafter\def\csname PY@tok@nf\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.00,0.00,1.00}{##1}}}
-\expandafter\def\csname PY@tok@si\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.73,0.40,0.53}{##1}}}
-\expandafter\def\csname PY@tok@s2\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.73,0.13,0.13}{##1}}}
-\expandafter\def\csname PY@tok@nt\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.00,0.50,0.00}{##1}}}
-\expandafter\def\csname PY@tok@nv\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.10,0.09,0.49}{##1}}}
-\expandafter\def\csname PY@tok@s1\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.73,0.13,0.13}{##1}}}
-\expandafter\def\csname PY@tok@dl\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.73,0.13,0.13}{##1}}}
-\expandafter\def\csname PY@tok@ch\endcsname{\let\PY@it=\textit\def\PY@tc##1{\textcolor[rgb]{0.25,0.50,0.50}{##1}}}
-\expandafter\def\csname PY@tok@m\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.40,0.40,0.40}{##1}}}
-\expandafter\def\csname PY@tok@gp\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.00,0.00,0.50}{##1}}}
-\expandafter\def\csname PY@tok@sh\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.73,0.13,0.13}{##1}}}
-\expandafter\def\csname PY@tok@ow\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.67,0.13,1.00}{##1}}}
-\expandafter\def\csname PY@tok@sx\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.00,0.50,0.00}{##1}}}
-\expandafter\def\csname PY@tok@bp\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.00,0.50,0.00}{##1}}}
-\expandafter\def\csname PY@tok@c1\endcsname{\let\PY@it=\textit\def\PY@tc##1{\textcolor[rgb]{0.25,0.50,0.50}{##1}}}
-\expandafter\def\csname PY@tok@fm\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.00,0.00,1.00}{##1}}}
-\expandafter\def\csname PY@tok@o\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.40,0.40,0.40}{##1}}}
-\expandafter\def\csname PY@tok@kc\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.00,0.50,0.00}{##1}}}
-\expandafter\def\csname PY@tok@c\endcsname{\let\PY@it=\textit\def\PY@tc##1{\textcolor[rgb]{0.25,0.50,0.50}{##1}}}
-\expandafter\def\csname PY@tok@mf\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.40,0.40,0.40}{##1}}}
-\expandafter\def\csname PY@tok@err\endcsname{\def\PY@bc##1{\setlength{\fboxsep}{0pt}\fcolorbox[rgb]{1.00,0.00,0.00}{1,1,1}{\strut ##1}}}
-\expandafter\def\csname PY@tok@mb\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.40,0.40,0.40}{##1}}}
-\expandafter\def\csname PY@tok@ss\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.10,0.09,0.49}{##1}}}
-\expandafter\def\csname PY@tok@sr\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.73,0.40,0.53}{##1}}}
-\expandafter\def\csname PY@tok@mo\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.40,0.40,0.40}{##1}}}
-\expandafter\def\csname PY@tok@kd\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.00,0.50,0.00}{##1}}}
-\expandafter\def\csname PY@tok@mi\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.40,0.40,0.40}{##1}}}
-\expandafter\def\csname PY@tok@kn\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.00,0.50,0.00}{##1}}}
-\expandafter\def\csname PY@tok@cpf\endcsname{\let\PY@it=\textit\def\PY@tc##1{\textcolor[rgb]{0.25,0.50,0.50}{##1}}}
-\expandafter\def\csname PY@tok@kr\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.00,0.50,0.00}{##1}}}
-\expandafter\def\csname PY@tok@s\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.73,0.13,0.13}{##1}}}
-\expandafter\def\csname PY@tok@kp\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.00,0.50,0.00}{##1}}}
-\expandafter\def\csname PY@tok@w\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.73,0.73,0.73}{##1}}}
-\expandafter\def\csname PY@tok@kt\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.69,0.00,0.25}{##1}}}
-\expandafter\def\csname PY@tok@sc\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.73,0.13,0.13}{##1}}}
-\expandafter\def\csname PY@tok@sb\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.73,0.13,0.13}{##1}}}
-\expandafter\def\csname PY@tok@sa\endcsname{\def\PY@tc##1{\textcolor[rgb]{0.73,0.13,0.13}{##1}}}
-\expandafter\def\csname PY@tok@k\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.00,0.50,0.00}{##1}}}
-\expandafter\def\csname PY@tok@se\endcsname{\let\PY@bf=\textbf\def\PY@tc##1{\textcolor[rgb]{0.73,0.40,0.13}{##1}}}
-\expandafter\def\csname PY@tok@sd\endcsname{\let\PY@it=\textit\def\PY@tc##1{\textcolor[rgb]{0.73,0.13,0.13}{##1}}}
-
-\def\PYZbs{\char`\\}
-\def\PYZus{\char`\_}
-\def\PYZob{\char`\{}
-\def\PYZcb{\char`\}}
-\def\PYZca{\char`\^}
-\def\PYZam{\char`\&}
-\def\PYZlt{\char`\<}
-\def\PYZgt{\char`\>}
-\def\PYZsh{\char`\#}
-\def\PYZpc{\char`\%}
-\def\PYZdl{\char`\$}
-\def\PYZhy{\char`\-}
-\def\PYZsq{\char`\'}
-\def\PYZdq{\char`\"}
-\def\PYZti{\char`\~}
-% for compatibility with earlier versions
-\def\PYZat{@}
-\def\PYZlb{[}
-\def\PYZrb{]}
-\makeatother
-
-
-    % For linebreaks inside Verbatim environment from package fancyvrb. 
-    \makeatletter
-        \newbox\Wrappedcontinuationbox 
-        \newbox\Wrappedvisiblespacebox 
-        \newcommand*\Wrappedvisiblespace {\textcolor{red}{\textvisiblespace}} 
-        \newcommand*\Wrappedcontinuationsymbol {\textcolor{red}{\llap{\tiny$\m@th\hookrightarrow$}}} 
-        \newcommand*\Wrappedcontinuationindent {3ex } 
-        \newcommand*\Wrappedafterbreak {\kern\Wrappedcontinuationindent\copy\Wrappedcontinuationbox} 
-        % Take advantage of the already applied Pygments mark-up to insert 
-        % potential linebreaks for TeX processing. 
-        %        {, <, #, %, $, ' and ": go to next line. 
-        %        _, }, ^, &, >, - and ~: stay at end of broken line. 
-        % Use of \textquotesingle for straight quote. 
-        \newcommand*\Wrappedbreaksatspecials {% 
-            \def\PYGZus{\discretionary{\char`\_}{\Wrappedafterbreak}{\char`\_}}% 
-            \def\PYGZob{\discretionary{}{\Wrappedafterbreak\char`\{}{\char`\{}}% 
-            \def\PYGZcb{\discretionary{\char`\}}{\Wrappedafterbreak}{\char`\}}}% 
-            \def\PYGZca{\discretionary{\char`\^}{\Wrappedafterbreak}{\char`\^}}% 
-            \def\PYGZam{\discretionary{\char`\&}{\Wrappedafterbreak}{\char`\&}}% 
-            \def\PYGZlt{\discretionary{}{\Wrappedafterbreak\char`\<}{\char`\<}}% 
-            \def\PYGZgt{\discretionary{\char`\>}{\Wrappedafterbreak}{\char`\>}}% 
-            \def\PYGZsh{\discretionary{}{\Wrappedafterbreak\char`\#}{\char`\#}}% 
-            \def\PYGZpc{\discretionary{}{\Wrappedafterbreak\char`\%}{\char`\%}}% 
-            \def\PYGZdl{\discretionary{}{\Wrappedafterbreak\char`\$}{\char`\$}}% 
-            \def\PYGZhy{\discretionary{\char`\-}{\Wrappedafterbreak}{\char`\-}}% 
-            \def\PYGZsq{\discretionary{}{\Wrappedafterbreak\textquotesingle}{\textquotesingle}}% 
-            \def\PYGZdq{\discretionary{}{\Wrappedafterbreak\char`\"}{\char`\"}}% 
-            \def\PYGZti{\discretionary{\char`\~}{\Wrappedafterbreak}{\char`\~}}% 
-        } 
-        % Some characters . , ; ? ! / are not pygmentized. 
-        % This macro makes them "active" and they will insert potential linebreaks 
-        \newcommand*\Wrappedbreaksatpunct {% 
-            \lccode`\~`\.\lowercase{\def~}{\discretionary{\hbox{\char`\.}}{\Wrappedafterbreak}{\hbox{\char`\.}}}% 
-            \lccode`\~`\,\lowercase{\def~}{\discretionary{\hbox{\char`\,}}{\Wrappedafterbreak}{\hbox{\char`\,}}}% 
-            \lccode`\~`\;\lowercase{\def~}{\discretionary{\hbox{\char`\;}}{\Wrappedafterbreak}{\hbox{\char`\;}}}% 
-            \lccode`\~`\:\lowercase{\def~}{\discretionary{\hbox{\char`\:}}{\Wrappedafterbreak}{\hbox{\char`\:}}}% 
-            \lccode`\~`\?\lowercase{\def~}{\discretionary{\hbox{\char`\?}}{\Wrappedafterbreak}{\hbox{\char`\?}}}% 
-            \lccode`\~`\!\lowercase{\def~}{\discretionary{\hbox{\char`\!}}{\Wrappedafterbreak}{\hbox{\char`\!}}}% 
-            \lccode`\~`\/\lowercase{\def~}{\discretionary{\hbox{\char`\/}}{\Wrappedafterbreak}{\hbox{\char`\/}}}% 
-            \catcode`\.\active
-            \catcode`\,\active 
-            \catcode`\;\active
-            \catcode`\:\active
-            \catcode`\?\active
-            \catcode`\!\active
-            \catcode`\/\active 
-            \lccode`\~`\~ 	
-        }
-    \makeatother
-
-    \let\OriginalVerbatim=\Verbatim
-    \makeatletter
-    \renewcommand{\Verbatim}[1][1]{%
-        %\parskip\z@skip
-        \sbox\Wrappedcontinuationbox {\Wrappedcontinuationsymbol}%
-        \sbox\Wrappedvisiblespacebox {\FV@SetupFont\Wrappedvisiblespace}%
-        \def\FancyVerbFormatLine ##1{\hsize\linewidth
-            \vtop{\raggedright\hyphenpenalty\z@\exhyphenpenalty\z@
-                \doublehyphendemerits\z@\finalhyphendemerits\z@
-                \strut ##1\strut}%
-        }%
-        % If the linebreak is at a space, the latter will be displayed as visible
-        % space at end of first line, and a continuation symbol starts next line.
-        % Stretch/shrink are however usually zero for typewriter font.
-        \def\FV@Space {%
-            \nobreak\hskip\z@ plus\fontdimen3\font minus\fontdimen4\font
-            \discretionary{\copy\Wrappedvisiblespacebox}{\Wrappedafterbreak}
-            {\kern\fontdimen2\font}%
-        }%
-        
-        % Allow breaks at special characters using \PYG... macros.
-        \Wrappedbreaksatspecials
-        % Breaks at punctuation characters . , ; ? ! and / need catcode=\active 	
-        \OriginalVerbatim[#1,codes*=\Wrappedbreaksatpunct]%
-    }
-    \makeatother
-
-    % Exact colors from NB
-    \definecolor{incolor}{HTML}{303F9F}
-    \definecolor{outcolor}{HTML}{D84315}
-    \definecolor{cellborder}{HTML}{CFCFCF}
-    \definecolor{cellbackground}{HTML}{F7F7F7}
-    
-    % prompt
-    \newcommand{\prompt}[4]{
-        \llap{{\color{#2}[#3]: #4}}\vspace{-1.25em}
-    }
-    
-
-    
-    % Prevent overflowing lines due to hard-to-break entities
-    \sloppy 
-    % Setup hyperref package
-    \hypersetup{
-      breaklinks=true,  % so long urls are correctly broken across lines
-      colorlinks=true,
-      urlcolor=urlcolor,
-      linkcolor=linkcolor,
-      citecolor=citecolor,
-      }
-    % Slightly bigger margins than the latex defaults
-    
-    \geometry{verbose,tmargin=1in,bmargin=1in,lmargin=1in,rmargin=1in}
-    
-    
-
-    \begin{document}
-    
-    
-    \maketitle
-    
-    
-
-    
-    \section{Example 1: Linear
-regression}\label{example-1-linear-regression}
-
-\subsubsection{Description of ToothGrowth
-dataset}\label{description-of-toothgrowth-dataset}
-
-The ToothGrowth dataset loads with the datasets package.
-
-    The data are from an experiment examining how vitamin C dosage delivered
-in 2 different methods predicts tooth growth in guinea pigs.
-
-The data consist of 60 observations, representing 60 guinea pigs, and 3
-variables:
-
-\begin{itemize}
-\tightlist
-\item
-  \textbf{\emph{len}}: numeric, tooth (odontoblast, actually) length
-\item
-  \textbf{\emph{supp}}: factor, supplement type, 2 levels, ``VC'' is
-  ascorbic acid, and ``OJ'' is orange juice
-\item
-  \textbf{\emph{dose}}: numeric, dose (mg/day)
-\end{itemize}
-
-A quick look at ToothGrowth reveals that many guinea pigs were given the
-same dose of vitamin C. Three doses, 0.5, 1.0, and 2.0, were used. ​
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{ }{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
-\PY{c+c1}{\PYZsh{}look at ToothGrowth data}
-str\PY{p}{(}ToothGrowth\PY{p}{)}
-\end{Verbatim}
-\end{tcolorbox}
-
-    \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
-\prompt{In}{incolor}{ }{\hspace{4pt}}
-\begin{Verbatim}[commandchars=\\\{\}]
-\PY{k+kp}{unique}\PY{p}{(}ToothGrowth\PY{o}{\PYZdl{}}dose\PY{p}{)}
+\PY{k+kp}{unique}  (ToothGrowth$dose {)}
 \PY{c+c1}{\PYZsh{}\PYZsh{} [1] 0.5 1.0 2.0}
 \end{Verbatim}
 \end{tcolorbox}
 
-    \subsubsection{Example 1: Exploratory
-analysis}\label{example-1-exploratory-analysis}
 
-Graphical exploration of the dataset provides the researcher with
-descriptive depictions of summaries of variables or relationship among
-variables.
-
-We being our exploration of Toothgrowth by examining the distributions
-of supp and dose. Since both variables are discretely distributed, we
-want the frequencies (counts) of each value.
-
-Frequencies are often plotted as bars, so we select geom\_bar. We
-specify dose mapped to x and supp mapped to the fill color of the bars,
-which will give us counts of each dose divided by supp.
 
 \subsubsection{Exploring distributions}\label{exploring-distributions}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{3}{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
-\PY{k+kn}{library}\PY{p}{(}ggplot2\PY{p}{)}
+\PY{k+kn}{library}  (ggplot2 {)}
 \PY{c+c1}{\PYZsh{}bar plot of counts of dose by supp}
 \PY{c+c1}{\PYZsh{}data are balanced, so not so interesting}
-ggplot\PY{p}{(}ToothGrowth\PY{p}{,} aes\PY{p}{(}x\PY{o}{=}dose\PY{p}{,} fill\PY{o}{=}supp\PY{p}{)}\PY{p}{)} \PY{o}{+}  geom\PYZus{}bar\PY{p}{(}\PY{p}{)}
+ggplot  (ToothGrowth {,} aes  (x  = dose {,} fill  = supp {)} {)}  +}  geom\PYZus{}bar  ( {)}
 \end{Verbatim}
 \end{tcolorbox}
 
-    
-    
-    \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_5_1.png}
-    \end{center}
-    { \hspace*{\fill} \\}
-    
+
     Statistical models often make assumptions about the distribution of the
 outcome (or its residuals), so an inspection might be wise. First let's
 check the overall distribution of ``len'' with a density plot:
@@ -455,7 +37,7 @@ check the overall distribution of ``len'' with a density plot:
 \prompt{In}{incolor}{7}{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}density of len}
-ggplot\PY{p}{(}ToothGrowth\PY{p}{,} aes\PY{p}{(}x\PY{o}{=}len\PY{p}{)}\PY{p}{)}  \PY{o}{+} geom\PYZus{}density\PY{p}{(}\PY{p}{)}
+ggplot  (ToothGrowth {,} aes  (x  = len {)} {)}   +} geom\PYZus{}density  ( {)}
 \end{Verbatim}
 \end{tcolorbox}
 
@@ -471,10 +53,10 @@ ggplot\PY{p}{(}ToothGrowth\PY{p}{,} aes\PY{p}{(}x\PY{o}{=}len\PY{p}{)}\PY{p}{)} 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{4}{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
-\PY{k+kn}{library}\PY{p}{(}ggplot2\PY{p}{)}
+\PY{k+kn}{library}  (ggplot2 {)}
 \PY{c+c1}{\PYZsh{}density of len by supp}
-ggplot\PY{p}{(}ToothGrowth\PY{p}{,} aes\PY{p}{(}x\PY{o}{=}len\PY{p}{,} color\PY{o}{=}supp\PY{p}{)}\PY{p}{)} \PY{o}{+} 
-  geom\PYZus{}density\PY{p}{(}\PY{p}{)}
+ggplot  (ToothGrowth {,} aes  (x  = len {,} color  = supp {)} {)}  +} 
+  geom\PYZus{}density  ( {)}
 \end{Verbatim}
 \end{tcolorbox}
 
@@ -505,8 +87,8 @@ We plot the dose-tooth length (len) relationship.
 \prompt{In}{incolor}{5}{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}not the best scatterplot}
-tp \PY{o}{\PYZlt{}\PYZhy{}} ggplot\PY{p}{(}ToothGrowth\PY{p}{,} aes\PY{p}{(}x\PY{o}{=}dose\PY{p}{,} y\PY{o}{=}len\PY{p}{)}\PY{p}{)}
-tp \PY{o}{+} geom\PYZus{}point\PY{p}{(}\PY{p}{)}
+tp  \PYZlt{}\PYZhy{}} ggplot  (ToothGrowth {,} aes  (x  = dose {,} y  = len {)} {)}
+tp  +} geom\PYZus{}point  ( {)}
 \end{Verbatim}
 \end{tcolorbox}
 
@@ -521,7 +103,7 @@ tp \PY{o}{+} geom\PYZus{}point\PY{p}{(}\PY{p}{)}
 \prompt{In}{incolor}{6}{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}mean and cl of len at each dose}
-tp.1 \PY{o}{\PYZlt{}\PYZhy{}} tp \PY{o}{+} stat\PYZus{}summary\PY{p}{(}fun.data\PY{o}{=}\PY{l+s}{\PYZdq{}}\PY{l+s}{mean\PYZus{}cl\PYZus{}normal\PYZdq{}}\PY{p}{)}
+tp.1  \PYZlt{}\PYZhy{}} tp  +} stat\PYZus{}summary  (fun.data  = \PY{l+s}{\PYZdq{}}\PY{l+s}{mean\PYZus{}cl\PYZus{}normal\PYZdq{}} {)}
 tp.1
 \end{Verbatim}
 \end{tcolorbox}
@@ -542,7 +124,7 @@ means. ​
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}add a line plot of means to see dose\PYZhy{}len relationship}
 \PY{c+c1}{\PYZsh{}maybe not linear}
-tp.2 \PY{o}{\PYZlt{}\PYZhy{}} tp.1 \PY{o}{+} stat\PYZus{}summary\PY{p}{(}fun.y\PY{o}{=}\PY{l+s}{\PYZdq{}}\PY{l+s}{mean\PYZdq{}}\PY{p}{,} geom\PY{o}{=}\PY{l+s}{\PYZdq{}}\PY{l+s}{line\PYZdq{}}\PY{p}{)}
+tp.2  \PYZlt{}\PYZhy{}} tp.1  +} stat\PYZus{}summary  (fun.y  = \PY{l+s}{\PYZdq{}}\PY{l+s}{mean\PYZdq{}} {,} geom  = \PY{l+s}{\PYZdq{}}\PY{l+s}{line\PYZdq{}} {)}
 tp.2
 \end{Verbatim}
 \end{tcolorbox}
@@ -557,9 +139,9 @@ tp.2
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{ }{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
-Does a third variable moderate the x\PY{o}{\PYZhy{}}y relationship\PY{o}{?}
+Does a third variable moderate the x \PYZhy{}}y relationship ?}
 
-Does the dose\PY{o}{\PYZhy{}}len relationship depend on supp\PY{o}{?} We can specify new global aesthetics \PY{k+kr}{in} aes.
+Does the dose \PYZhy{}}len relationship depend on supp ?} We can specify new global aesthetics \PY{k+kr}{in} aes.
 \end{Verbatim}
 \end{tcolorbox}
 
@@ -567,7 +149,7 @@ Does the dose\PY{o}{\PYZhy{}}len relationship depend on supp\PY{o}{?} We can spe
 \prompt{In}{incolor}{ }{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}all plots in tp.2 will now be colored by supp}
-tp.2 \PY{o}{+} aes\PY{p}{(}color\PY{o}{=}supp\PY{p}{)}
+tp.2  +} aes  (color  = supp {)}
 \end{Verbatim}
 \end{tcolorbox}
 
@@ -578,17 +160,17 @@ This graph suggests:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
+
+* 
   The slope of the dose-response curve decreases as dose increases for
   both supp types, suggesting a quadratic function.
-\item
+* 
   The slope of the OJ curve flattens more dramatically, perhaps
   suggesting the quadratic term is different between supplement groups
-\item
+* 
   The initial slopes look rather similar, perhaps suggesting that the
   linear term may not be different between groups
-\item
+* 
   The 2 supp group means differ at the two lower doses, but not at the
   highest dose
 \end{enumerate}
@@ -613,7 +195,7 @@ for use in the quadratic model and prediction later. ​
 \prompt{In}{incolor}{8}{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}create dose\PYZhy{}squared variable}
-ToothGrowth\PY{o}{\PYZdl{}}dosesq \PY{o}{\PYZlt{}\PYZhy{}} ToothGrowth\PY{o}{\PYZdl{}}dose\PY{o}{\PYZca{}}\PY{l+m}{2}
+ToothGrowth$dosesq  \PYZlt{}\PYZhy{}} ToothGrowth$dose \PYZca{}}\PY{l+m}{2}
 \end{Verbatim}
 \end{tcolorbox}
 
@@ -627,8 +209,8 @@ reflect our expectations:
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{9}{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
-lm2 \PY{o}{\PYZlt{}\PYZhy{}} lm\PY{p}{(}len \PY{o}{\PYZti{}} dose \PY{o}{+} dosesq\PY{o}{*}supp\PY{p}{,} data\PY{o}{=}ToothGrowth\PY{p}{)}
-\PY{k+kp}{summary}\PY{p}{(}lm2\PY{p}{)}\PY{o}{\PYZdl{}}coef
+lm2  \PYZlt{}\PYZhy{}} lm  (len  \PYZti{}} dose  +} dosesq *}supp {,} data  = ToothGrowth {)}
+\PY{k+kp}{summary}  (lm2 {)}$coef
 \PY{c+c1}{\PYZsh{}\PYZsh{}                 Estimate Std. Error    t value     Pr(\PYZgt{}|t|)}
 \PY{c+c1}{\PYZsh{}\PYZsh{} (Intercept)    0.7491667  2.7983895  0.2677135 7.899213e\PYZhy{}01}
 \PY{c+c1}{\PYZsh{}\PYZsh{} dose          30.1550000  5.2474684  5.7465806 4.114588e\PYZhy{}07}
@@ -659,39 +241,39 @@ Statistical inference depends on the assumptions of the regression
 model, which we check with diagnostic graphs. Common diagnostics for
 linear regression
 
-\begin{itemize}
-\tightlist
-\item
+
+
+* 
   inspect the normality of the residuals
-\item
+* 
   verify that the residuals show no trends (assumption of linearity) and
   are homoscedastic,
-\item
+* 
   check for overly influential outliers.
-\item
+* 
   fortify makes linear regression diagnostics easy
-\end{itemize}
+
 
     Conveniently, the fortify function takes a lm model object (one among
 several classes) and returns a dataset with several estimated diagnostic
 variables including:
 
-\begin{itemize}
-\tightlist
-\item
+
+
+* 
   .hat: leverages(influence)
-\item
+* 
   .sigma: residual standard deviation when observation dropped from
   model
-\item
+* 
   .cooksd: Cook's distance
-\item
+* 
   .fitted: fitted (predicted) values
-\item
+* 
   .resid: residuals
-\item
+* 
   .stdresid: standardized residuals
-\end{itemize}
+
 
 We fortify our lm2 object with these diagnostic variables and take a
 quick look a the new variables.
@@ -700,9 +282,9 @@ quick look a the new variables.
 \prompt{In}{incolor}{11}{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}create dataset with original data and diagnostic variables}
-lm2diag \PY{o}{\PYZlt{}\PYZhy{}} fortify\PY{p}{(}lm2\PY{p}{)}
+lm2diag  \PYZlt{}\PYZhy{}} fortify  (lm2 {)}
 \PY{c+c1}{\PYZsh{}quick look}
-\PY{k+kp}{head}\PY{p}{(}lm2diag\PY{p}{)}
+\PY{k+kp}{head}  (lm2diag {)}
 \end{Verbatim}
 \end{tcolorbox}
 
@@ -722,30 +304,30 @@ lm2diag \PY{o}{\PYZlt{}\PYZhy{}} fortify\PY{p}{(}lm2\PY{p}{)}
     \subsubsection{Normality of residuals: q-q plot and
 stat\_qq}\label{normality-of-residuals-q-q-plot-and-statux5fqq}
 
-\begin{itemize}
-\item
+
+* 
   A q-q plot can assess the assumption that the residuals are normally
   distributed by plotting the standardized residuals (observed z-score)
   against theoretical quantiles of the normal distribution (expected
   z-score if normally distributed).
-\item
+* 
   stat\_qq creates a qq-plot. The only required aesthetic is sample,
   which we map to the standardized residual variable created by fortify,
   .stdresid.
-\item
+* 
   A diagonal reference line (intercept=0, slope=1) is added to the plot
   with geom\_abline, representing perfect fit to a normal distribution.
   The normal distribution will appear to be a reasonable fit below.
-\end{itemize}
+
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{12}{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}q\PYZhy{}q plot of residuals and diagonal reference line}
 \PY{c+c1}{\PYZsh{}geom\PYZus{}abline default aesthetics are yintercept=0 and slope=1}
-ggplot\PY{p}{(}lm2diag\PY{p}{,} aes\PY{p}{(}sample\PY{o}{=}\PY{l+m}{.}stdresid\PY{p}{)}\PY{p}{)} \PY{o}{+} 
-  stat\PYZus{}qq\PY{p}{(}\PY{p}{)} \PY{o}{+} 
-  geom\PYZus{}abline\PY{p}{(}\PY{p}{)}
+ggplot  (lm2diag {,} aes  (sample  = \PY{l+m}{.}stdresid {)} {)}  +} 
+  stat\PYZus{}qq  ( {)}  +} 
+  geom\PYZus{}abline  ( {)}
 \end{Verbatim}
 \end{tcolorbox}
 
@@ -761,20 +343,20 @@ ggplot\PY{p}{(}lm2diag\PY{p}{,} aes\PY{p}{(}sample\PY{o}{=}\PY{l+m}{.}stdresid\P
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}\PYZsh{}\PYZsh{} Linearity and Homoscedasticity: residuals vs fitted}
 
-We \PY{k+kr}{next} assess the assumptions of homoscedescasticity and linear relationships between the outcome and predictors. A residuals vs fitted \PY{p}{(}predicted value\PY{p}{)} plot assesses both of these assmuptions.
+We \PY{k+kr}{next} assess the assumptions of homoscedescasticity and linear relationships between the outcome and predictors. A residuals vs fitted   (predicted value {)} plot assesses both of these assmuptions.
 
-An even spread of residuals around \PY{l+m}{0} suggests homoscedasticity\PY{p}{,} and a zero\PY{p}{,} flat slope \PY{k+kr}{for} residuals against fitted suggests linearity of predictor effects.
+An even spread of residuals around \PY{l+m}{0} suggests homoscedasticity {,} and a zero {,} flat slope \PY{k+kr}{for} residuals against fitted suggests linearity of predictor effects.
 \end{Verbatim}
 \end{tcolorbox}
 
     \begin{tcolorbox}[breakable, size=fbox, boxrule=1pt, pad at break*=1mm,colback=cellbackground, colframe=cellborder]
 \prompt{In}{incolor}{ }{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
-We build our residuals vs fitted plot like so\PY{o}{:}
+We build our residuals vs fitted plot like so :}
 
-\PY{l+m}{1}\PY{l+m}{.} Start with a scatter plot of x\PY{o}{=}\PY{l+m}{.}fitted and y\PY{o}{=}\PY{l+m}{.}stdresid.
+\PY{l+m}{1}\PY{l+m}{.} Start with a scatter plot of x  = \PY{l+m}{.}fitted and y  = \PY{l+m}{.}stdresid.
 \PY{l+m}{2}\PY{l+m}{.} Add a plot the means and standard errors of the residuals across fitted values using stat\PYZus{}summary. The standard error bars somewhat address homoskedasticity.
-\PY{l+m}{3}\PY{l+m}{.} Plot a line representing the mean trend of the residuals with another call to stat\PYZus{}summary \PY{p}{(}changing \PY{k+kr}{function} to mean and geom to line\PY{p}{)}\PY{l+m}{.} Normally\PY{p}{,} we would use geom\PYZus{}smooth to plot a loess curve to visualize the trend among residuals\PY{p}{,} but loess smooths do not work well when the variable mapped to x is discrete.
+\PY{l+m}{3}\PY{l+m}{.} Plot a line representing the mean trend of the residuals with another call to stat\PYZus{}summary   (changing \PY{k+kr}{function} to mean and geom to line {)}\PY{l+m}{.} Normally {,} we would use geom\PYZus{}smooth to plot a loess curve to visualize the trend among residuals {,} but loess smooths do not work well when the variable mapped to x is discrete.
 \PY{l+m}{4}\PY{l+m}{.} The error bars do not appear to vary too much and the line seems sufficiently flat to feel that neither assumption has been violated.
 \end{Verbatim}
 \end{tcolorbox}
@@ -783,10 +365,10 @@ We build our residuals vs fitted plot like so\PY{o}{:}
 \prompt{In}{incolor}{ }{\hspace{4pt}}
 \begin{Verbatim}[commandchars=\\\{\}]
 \PY{c+c1}{\PYZsh{}residual vs fitted, means and s.e.}
-ggplot\PY{p}{(}lm2diag\PY{p}{,} aes\PY{p}{(}x\PY{o}{=}\PY{l+m}{.}fitted\PY{p}{,} y\PY{o}{=}\PY{l+m}{.}stdresid\PY{p}{)}\PY{p}{)} \PY{o}{+} 
-  geom\PYZus{}point\PY{p}{(}\PY{p}{)} \PY{o}{+} 
-  stat\PYZus{}summary\PY{p}{(}\PY{p}{)} \PY{o}{+} 
-  stat\PYZus{}summary\PY{p}{(}fun.y\PY{o}{=}\PY{l+s}{\PYZdq{}}\PY{l+s}{mean\PYZdq{}}\PY{p}{,} geom\PY{o}{=}\PY{l+s}{\PYZdq{}}\PY{l+s}{line\PYZdq{}}\PY{p}{)}
+ggplot  (lm2diag {,} aes  (x  = \PY{l+m}{.}fitted {,} y  = \PY{l+m}{.}stdresid {)} {)}  +} 
+  geom\PYZus{}point  ( {)}  +} 
+  stat\PYZus{}summary  ( {)}  +} 
+  stat\PYZus{}summary  (fun.y  = \PY{l+s}{\PYZdq{}}\PY{l+s}{mean\PYZdq{}} {,} geom  = \PY{l+s}{\PYZdq{}}\PY{l+s}{line\PYZdq{}} {)}
 \PY{c+c1}{\PYZsh{}\PYZsh{} No summary function supplied, defaulting to `mean\PYZus{}se()}
 \end{Verbatim}
 \end{tcolorbox}
@@ -820,10 +402,10 @@ influential for concern.
 \PY{c+c1}{\PYZsh{} in geom\PYZus{}text we SET size to 4 so that size of text is constant,}
 \PY{c+c1}{\PYZsh{}   and not tied to .cooksd.  We also  nudge the text .001 (x\PYZhy{}axis units)}
 \PY{c+c1}{\PYZsh{}   to the left, and separate overlapping labels}
-ggplot\PY{p}{(}lm2diag\PY{p}{,} aes\PY{p}{(}x\PY{o}{=}\PY{l+m}{.}hat\PY{p}{,} y\PY{o}{=}\PY{l+m}{.}stdresid\PY{p}{,} size\PY{o}{=}\PY{l+m}{.}cooksd\PY{p}{)}\PY{p}{)} \PY{o}{+}     
-  geom\PYZus{}point\PY{p}{(}\PY{p}{)} \PY{o}{+}
-  geom\PYZus{}text\PY{p}{(}aes\PY{p}{(}label\PY{o}{=}\PY{k+kp}{row.names}\PY{p}{(}lm2diag\PY{p}{)}\PY{p}{)}\PY{p}{,} 
-             size\PY{o}{=}\PY{l+m}{4}\PY{p}{,} nudge\PYZus{}x\PY{o}{=}\PY{l+m}{\PYZhy{}0.003}\PY{p}{,} check\PYZus{}overlap\PY{o}{=}\PY{n+nb+bp}{T}\PY{p}{)}
+ggplot  (lm2diag {,} aes  (x  = \PY{l+m}{.}hat {,} y  = \PY{l+m}{.}stdresid {,} size  = \PY{l+m}{.}cooksd {)} {)}  +}     
+  geom\PYZus{}point  ( {)}  +}
+  geom\PYZus{}text  (aes  (label  = \PY{k+kp}{row.names}  (lm2diag {)} {)} {,} 
+             size  = \PY{l+m}{4} {,} nudge\PYZus{}x  = \PY{l+m}{\PYZhy{}0.003} {,} check\PYZus{}overlap  = \PY{n+nb+bp}{T} {)}
 \end{Verbatim}
 \end{tcolorbox}
 
